@@ -1,6 +1,6 @@
 AC_INIT(src/wacom.c)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(linuxwacom, 0.3.6-beta)
+AM_INIT_AUTOMAKE(linuxwacom, 0.3.7-beta)
 AM_MAINTAINER_MODE
 AC_PROG_CC
 AC_PROG_AWK
@@ -232,6 +232,28 @@ if test "$WAC_OPTION_HID" = "yes"; then
 	fi
 fi
 
+dnl Check for -fno-merge-constants if using gcc
+if test "x$GCC" = "xyes"; then
+    AC_MSG_CHECKING(if gcc accepts -fno-merge-constants)
+    OLD_CFLAGS="$CFLAGS"
+    CFLAGS="$CFLAGS -fno-merge-constants"
+    AC_TRY_COMPILE(, "int main(void) { return 0; }",
+        has_no_merge_constants=yes,
+        has_no_merge_constants=no)
+    CFLAGS=$OLD_CFLAGS
+
+    if test "$has_no_merge_constants" = "yes" ; then
+        AC_MSG_RESULT(yes)
+        WAC_NO_MERGE_CONSTANTS="-fnomerge-constants"
+    else
+        AC_MSG_RESULT(no)
+        WAC_NO_MERGE_CONSTANTS=""
+    fi
+fi
+
+dnl Separate test output from file-generation output
+echo 
+
 AC_SUBST(WAC_PROGS)
 AC_SUBST(WAC_MODULES)
 AC_SUBST(WAC_XF86PROGS)
@@ -242,6 +264,7 @@ AC_SUBST(WAC_ARCH)
 AC_SUBST(WAC_MODVER)
 AC_SUBST(WAC_KERNELDIR)
 AC_SUBST(WAC_XF86DIR)
+AC_SUBST(WAC_NO_MERGE_CONSTANTS)
 
 AC_OUTPUT(Makefile src/Makefile)
 
